# skill-vault-cli

./: .gitignore  AGENTS.md  CONFIGS.md  GEMINI.md  Guide.txt  README.md  agent_symlink.py  pyproject.toml  reproduce_html.py  reproduce_issue.py
.claude/handoffs/: 2026-02-20-155857-vault-remote-pull-main-branch-and-unrelated-histories.md
.docs/handoffs/: 2026-02-20-142004-vault-github-quickstart-and-handoff.md
.docs/plans/: fix-skill-name-inconsistency.md
.docs/project/: architecture.md  commands.md  index.md
.docs/project/guides/: creating-skills.md  vault-github-quickstart.md  windows-junctions.md  workflow.md
.docs/project/reference/: configuration.md  directory-structure.md  frameworks.md
config/: frameworks.yaml
src/skill_vault/: __init__.py  agent_markdown.py  cli.py  config.py  global_junctions.py  interactive.py  junction.py  skills.py  sync.py  vault.py
